# top-set-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: tauri-build.yml
.update/: windows-x86_64.json
src/: App.vue  main.js  router.js  views.js
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: constant.rs  lib.rs  main.rs
src-tauri/src/controller/: app_ctr.rs  mod.rs  update_ctr.rs  win_app_ctr.rs
src-tauri/src/tool/: app_tool.rs  mod.rs  update_tool.rs  win_app_tool.rs
src/common/: constant.js  utils.js
src/pages/: index.vue  setting.vue
