[package]
name = "top-set-tool"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cx_tool_vue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cron = "0.14.0"
regex = "1.9.6"
arboard = "3.3.0"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tokio-cron-scheduler = "0.13.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-upload = "2.2.1"
dotenv = "0.15.0"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
thiserror = "2.0.17"
# tokio + native-tls
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
evalexpr = "13.1.0"

windows = { version = "0.56", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }
image = "0.25"
base64 = "0.22"
walkdir = "2.3"
tauri-utils = "2.8.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
